# quprep

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
binder/: requirements.txt
docs/: contributing.md  hooks.py  index.md
docs/api/: barren_plateau.md  comparison.md  drift.md  encoders.md  exporters.md  imbalance.md  index.md  metrics.md  modalities.md  noise_aware.md  pipeline.md  plugins.md  qubo.md  suggest.md  validation.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: barren_plateau.md  comparison.md  drift.md  encodings.md  export.md  imbalance.md  inspect_benchmark.md  modalities.md  noise_aware.md  plugins.md  quality_metrics.md  qubo.md  reduction.md  streaming.md  suggest.md  validation.md
docs/javascripts/: mathjax.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: 01_quickstart.ipynb  01_quickstart.py  02_pipeline.ipynb  02_pipeline.py  03_encoders.ipynb  03_encoders.py  04_export.ipynb  04_export.py  04_qiskit_export.ipynb  04_qiskit_export.py  05_recommend.ipynb  05_recommend.py  06_visualization.ipynb  06_visualization.py  07_qubo.ipynb  07_qubo.py  08_validation.ipynb  08_validation.py  09_drift.ipynb  09_drift.py  10_suggest.ipynb  10_suggest.py  11_new_encoders.ipynb  11_new_encoders.py  11_plugins.ipynb  11_plugins.py  12_exporters.ipynb  12_exporters.py  12_modalities.ipynb  12_modalities.py  13_interoperability.py  14_noise_aware.py  15_quality_metrics.py  16_imbalance.py  17_barren_plateau.py  18_streaming.py  README.md
examples/how-to/: assess_encoding_quality.ipynb  assess_encoding_quality.py  choose_an_encoder.ipynb  choose_an_encoder.py  detect_data_drift.ipynb  detect_data_drift.py  export_to_frameworks.ipynb  export_to_frameworks.py  fix_class_imbalance.ipynb  fix_class_imbalance.py  inspect_a_circuit.ipynb  inspect_a_circuit.py  load_external_data.ipynb  load_external_data.py  noise_aware_preprocessing.ipynb  noise_aware_preprocessing.py  non_tabular_data.ipynb  non_tabular_data.py  solve_qubo.ipynb  solve_qubo.py  validate_before_encoding.ipynb  validate_before_encoding.py  write_a_custom_encoder.ipynb  write_a_custom_encoder.py
examples/tutorials/: 01_your_first_quantum_ready_dataset.ipynb  01_your_first_quantum_ready_dataset.py  02_real_world_messy_data.ipynb  02_real_world_messy_data.py  03_end_to_end_with_a_framework.ipynb  03_end_to_end_with_a_framework.py
papers/: benchmark.py
quprep/: __init__.py  cli.py  compare.py  plugins.py
quprep/clean/: __init__.py  categorical.py  imbalance.py  imputer.py  outlier.py  selector.py
quprep/core/: __init__.py  dataset.py  dataset.pyi  drift.py  fingerprint.py  pipeline.py  pipeline.pyi  qubit_suggestion.py  recommender.py
quprep/encode/: __init__.py  amplitude.py  angle.py  base.py  base.pyi  basis.py  dense_angle.py  discretized.py  entangled_angle.py  graph_state.py  hamiltonian.py  inspector.py  iqp.py  pauli_feature_map.py  qaoa_problem.py  random_fourier.py  reupload.py  tensor_product.py  zz_feature_map.py
quprep/export/: __init__.py  braket_export.py  cirq_export.py  iqm_export.py  pennylane_export.py  qasm_export.py  qiskit_export.py  qsharp_export.py  tket_export.py  visualize.py
quprep/ingest/: __init__.py  csv_ingester.py  graph_ingester.py  huggingface_ingester.py  image_ingester.py  kaggle_ingester.py  numpy_ingester.py  openml_ingester.py  profiler.py  text_ingester.py  timeseries_ingester.py
quprep/metrics/: __init__.py  _simulate.py  barren_plateau.py  expressibility.py  kernel.py  sensitivity.py
quprep/normalize/: __init__.py  scalers.py  scalers.pyi
quprep/preprocess/: __init__.py  noise_aware.py  window.py
quprep/qubo/: __init__.py  constraints.py  converter.py  ising.py  qaoa.py  solver.py  utils.py  visualize.py
quprep/qubo/problems/: __init__.py  graph_color.py  knapsack.py  maxcut.py  number_partition.py  portfolio.py  scheduling.py  tsp.py
quprep/reduce/: __init__.py  hardware_aware.py  lda.py  pca.py  spectral.py
quprep/validation/: __init__.py  __init__.pyi  compatibility.py  cost.py  input_validator.py  schema.py
tests/: conftest.py  test_barren_plateau.py  test_clean.py  test_cli.py  test_compare.py  test_compatibility.py  test_cost.py  test_dataset.py  test_drift.py  test_encode.py  test_encoder_base.py  test_export.py  test_fingerprint.py  test_graph.py  test_huggingface_ingester.py  test_image.py  test_imbalance.py  test_ingest.py  test_kaggle_ingester.py  test_metrics.py  test_modality.py  test_noise_aware.py  test_normalize.py  test_openml_ingester.py  test_pipeline.py  test_plugins.py  test_qubit_suggestion.py  test_qubo.py  test_recommender.py  test_reduce.py  test_sensitivity.py  test_sklearn_compat.py  test_streaming.py  test_suggest_pipeline.py  test_text.py  test_validation.py  test_visualize.py
