[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quprep"
version = "0.1.0"
description = "Quantum data preparation — the missing preprocessing layer between classical datasets and quantum computing frameworks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Hasarindu Perera" },
]
keywords = [
  "quantum computing",
  "quantum machine learning",
  "data preprocessing",
  "qiskit",
  "pennylane",
  "cirq",
  "NISQ",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]
pennylane = ["pennylane>=0.35"]
cirq = ["cirq>=1.3"]
tket = ["pytket>=1.25"]
viz = ["matplotlib>=3.7"]
all = [
  "qiskit>=1.0",
  "pennylane>=0.35",
  "cirq>=1.3",
  "pytket>=1.25",
  "matplotlib>=3.7",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "hypothesis>=6.0",
  "ruff>=0.4",
  "mypy>=1.0",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://quprep.org"
Documentation = "https://quprep.readthedocs.io"
Repository = "https://github.com/quprep/quprep"
"Bug Tracker" = "https://github.com/quprep/quprep/issues"
Changelog = "https://github.com/quprep/quprep/blob/main/CHANGELOG.md"

[project.scripts]
quprep = "quprep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["quprep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quprep --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
