[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quprep"
version = "0.6.0"
description = "Quantum data preparation — the missing preprocessing layer between classical datasets and quantum computing frameworks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Hasarindu Perera", email = "hasarindu@quprep.org" },
]
keywords = [
  "quantum computing",
  "quantum machine learning",
  "data preprocessing",
  "qiskit",
  "pennylane",
  "cirq",
  "NISQ",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]
pennylane = ["pennylane>=0.35"]
cirq = ["cirq>=1.3"]
tket = ["pytket>=1.25"]
braket = ["amazon-braket-sdk>=1.75"]
qsharp = ["qsharp>=1.0"]
iqm = ["iqm-client>=20.0"]
viz = ["matplotlib>=3.7"]
all = [
  "qiskit>=1.0",
  "pennylane>=0.35",
  "cirq>=1.3",
  "pytket>=1.25",
  "amazon-braket-sdk>=1.75",
  "qsharp>=1.0",
  "iqm-client>=20.0",
  "matplotlib>=3.7",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "hypothesis>=6.0",
  "ruff>=0.4",
  "mypy>=1.0",
  "mkdocs-material>=9.0",
  "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://quprep.org"
Documentation = "https://docs.quprep.org"
Repository = "https://github.com/quprep/quprep"
"Bug Tracker" = "https://github.com/quprep/quprep/issues"
Changelog = "https://github.com/quprep/quprep/blob/main/CHANGELOG.md"

[project.scripts]
quprep = "quprep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["quprep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=quprep --cov-report=term-missing"
filterwarnings = [
    # QuPrepWarning is intentional — suppress in tests that don't check for it
    "ignore::quprep.validation.QuPrepWarning",
    # NumPy divide-by-zero in recommender correlation computation (constant feature column)
    "ignore:invalid value encountered in divide:RuntimeWarning",
    # NumPy empty-slice mean in recommender (all-NaN column edge case)
    "ignore:Mean of empty slice:RuntimeWarning",
    # UMAP + numba threading layer warning — third-party, not actionable
    "ignore:n_jobs value.*overridden:UserWarning",
    "ignore:The TBB threading layer requires:Warning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "umap-learn>=0.5.11",
]
